--- a/base.html
+++ b/base.html
@@ -6,11 +6,11 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	  <title>Document</title>
-	  <link rel="stylesheet" type="git.css" href="%">
+	  <link rel="stylesheet" type="text/css" href="git.css">
 	</head>
 
 	<body>
-	 <header style="width:100%; height: 150px;" ></header>
+	 <header></header>
 	  <script src=" "></script>
 	</body>
 </html>
